Improved nav bar

--- a/index.html
+++ b/index.html
@@ -5,19 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="/assets/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
-    <title>SelfMine - Minecraft Server Hosting</title>
+    <title>SelfMine</title>
 </head>
 <body>
     
-    <nav class="overview" id="overview">
-        <h1><a href="index.html" style="text-decoration: none;">SelfMine</a></h1>
-        <ul>
-            <li><a href="#easy-setup">Easy Setup</a></li>
-            <li><a href="#dynamic-performance">Performance Optimization</a></li>
-            <li><a href="#real-time-monitoring">Real-time Monitoring</a></li>
-            <li><a href="#automated-backups">Automated Backups</a></li>
-            <li><a href="#customizable-settings">Customizable Settings</a></li>
-        </ul>
+    <nav class="overview expanded" id="overview">
+        <div class="title-container">
+            <h1><a href="index.html" style="text-decoration: none;">SelfMine</a></h1>
+        </div>
+        <div class="nav-items-container">
+            <ul>
+                <li><a href="#easy-setup">Easy-Setup</a></li>
+                <li><a href="#real-time-monitoring">Monitoring</a></li>
+                <li><a href="#automated-backups">Backups</a></li>
+                <li><a href="#customizable-settings">Settings</a></li>
+            </ul>
+            <a href="#cta"><button class="button-primary">Join Us!</button></a>
+        </div>
     </nav>
 
     <main>
@@ -61,7 +65,7 @@
             <p>SelfMine is designed to simplify the process of hosting your Minecraft servers, allowing you to focus on what matters most: playing the game.</p>
         </section>
 
-        <section class="cta">
+        <section class="cta" id="cta">
             <h2>Join Us!</h2>
             <p>Sign up to stay updated about the launch of SelfMine!</p>
             <button class="button-primary" id="registerBtnBottom">Register Your Interest</button>
